force-app/main/default/objects/Case/fields/Dias_cubiertos_con_la_MM_a__c.field-meta.xml
<CustomField>
    <fullName>Dias_cubiertos_con_la_MM_a__c</fullName>
    <label>Dias de tratamiento cubiertos con la MM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 día</fullName>
            </value>
            <value>
                <fullName>2 días</fullName>
            </value>
            <value>
                <fullName>3 días</fullName>
            </value>
            <value>
                <fullName>4 días</fullName>
            </value>
            <value>
                <fullName>5 días</fullName>
            </value>
            <value>
                <fullName>7 días</fullName>
            </value>
            <value>
                <fullName>10 días</fullName>
            </value>
            <value>
                <fullName>14 días</fullName>
            </value>
            <value>
                <fullName>+ de 14 días</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>