force-app/main/default/objects/Case/fields/Direcci_n_de_presentaci_n__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_de_presentaci_n__c</fullName>
    <inlineHelpText>En función de la selección anterior (En caso de presencial: Casa central o Delegación, en caso online: Email o Website) poner la dirección correspondiente</inlineHelpText>
    <label>Dirección de presentación</label>
    <length>200</length>
    <type>Text</type>
</CustomField>