force-app/main/default/objects/Case/fields/Direcci_n_del_punto_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_del_punto_de_venta__c</fullName>
    <label>Dirección del punto de venta</label>
    <length>40</length>
    <type>Text</type>
</CustomField>