force-app/main/default/objects/Case/fields/Direccion_del_paciente__c.field-meta.xml
<CustomField>
    <fullName>Direccion_del_paciente__c</fullName>
    <formula>Account.Calle__c  &amp; &apos;, &apos;  &amp;   Account.Codigo_postal_service__r.Name &amp; &apos; &apos; &amp;   Account.Localidad__c &amp; &apos; &apos; &amp;   Account.Provincia__c  &amp; &apos;, &apos; &amp;   Account.Pais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección del paciente</label>
    <type>Text</type>
</CustomField>