force-app/main/default/objects/Case/fields/Donde_lo_adquirio__c.field-meta.xml
<CustomField>
    <fullName>Donde_lo_adquirio__c</fullName>
    <label>¿Dónde lo adquirió?</label>
    <type>TextArea</type>
</CustomField>