force-app/main/default/objects/Case/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <label>Edad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>