force-app/main/default/objects/Case/fields/Encuesta_Capacitacion__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_Capacitacion__c</fullName>
    <formula>IF(
ISPICKVAL(Reason, &apos;Capacitación&apos;),
HYPERLINK(&apos;http://dev-danoneencuestas.cs13.force.com/TakeSurvey?id=a0PW0000002motbMAA&amp;cId=&apos;+Account.Contact_Id__c+&apos;&amp;caId=&apos;+Id, &apos;Encuesta de capacitación&apos;),
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Encuesta Capacitación</label>
    <type>Text</type>
</CustomField>