force-app/main/default/objects/Case/fields/Encuesta_NPS__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_NPS__c</fullName>
    <formula>HYPERLINK(
&apos;http://danoneencuestas.force.com/TakeSurvey?id=a051I000005BgKJQA0&amp;cId=&apos;+Account.Contact_Id__c+&apos;&amp;caId=&apos;+Id,  &apos;Encuesta&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Encuesta NPS</label>
    <type>Text</type>
</CustomField>