force-app/main/default/objects/Case/fields/Encuesta_proximitas__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_proximitas__c</fullName>
    <formula>HYPERLINK(&apos;http://dev-danoneencuestas.cs13.force.com/TakeSurvey?id=a0PW0000002mdurMAA&amp;cId=&apos;+Account.Contact_Id__c+&apos;&amp;caId=&apos;+Id,  &apos;Encuesta Proximitas&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Encuesta proximitas</label>
    <type>Text</type>
</CustomField>