force-app/main/default/objects/Case/fields/Ensayos_y_resultados__c.field-meta.xml
<CustomField>
    <fullName>Ensayos_y_resultados__c</fullName>
    <label>Ensayos y resultados</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>