force-app/main/default/objects/Case/fields/Entregado__c.field-meta.xml
<CustomField>
    <fullName>Entregado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recibido</label>
    <type>Checkbox</type>
</CustomField>