force-app/main/default/objects/Case/fields/Env_o_sin_cargo__c.field-meta.xml
<CustomField>
    <fullName>Env_o_sin_cargo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Envío sin cargo</label>
    <referenceTo>Envio_sin_Cargo__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>