force-app/main/default/objects/Case/fields/Enviar_a_asuntos_regulatorios__c.field-meta.xml
<CustomField>
    <fullName>Enviar_a_asuntos_regulatorios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar a asuntos regulatorios</label>
    <type>Checkbox</type>
</CustomField>