force-app/main/default/objects/Case/fields/Epicrisis__c.field-meta.xml
<CustomField>
    <fullName>Epicrisis__c</fullName>
    <inlineHelpText>Presentó epicrisis?</inlineHelpText>
    <label>Epicrisis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>