force-app/main/default/objects/Case/fields/Especialidad__c.field-meta.xml
<CustomField>
    <fullName>Especialidad__c</fullName>
    <formula>TEXT(Profesional__r.Primera_especialidad__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Especialidad</label>
    <type>Text</type>
</CustomField>