force-app/main/default/objects/Case/fields/Especialista__c.field-meta.xml
<CustomField>
    <fullName>Especialista__c</fullName>
    <description>Para el formulario de solicitud de kits de inicio desde el portal de pacientes</description>
    <label>Especialista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>