force-app/main/default/objects/Case/fields/Estado_del_an_lisis__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_an_lisis__c</fullName>
    <inlineHelpText>Al finalizar la carga de información del Análisis de Planta, marcar como completo para cerrar la actividad asociada.</inlineHelpText>
    <label>Estado del análisis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Completo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>