force-app/main/default/objects/Case/fields/Estado_o_provincia__c.field-meta.xml
<CustomField>
    <fullName>Estado_o_provincia__c</fullName>
    <label>Estado o provincia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>