force-app/main/default/objects/Case/fields/Estudios_m_dicos__c.field-meta.xml
<CustomField>
    <fullName>Estudios_m_dicos__c</fullName>
    <inlineHelpText>Presentó estudios médicos complementarios?</inlineHelpText>
    <label>Estudios médicos complementarios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>