force-app/main/default/objects/Case/fields/Fecha_de_an_lisis__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_an_lisis__c</fullName>
    <label>Fecha de análisis</label>
    <type>Date</type>
</CustomField>