force-app/main/default/objects/Case/fields/Fecha_de_caducidad__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_caducidad__c</fullName>
    <label>Fecha de caducidad</label>
    <type>Date</type>
</CustomField>