force-app/main/default/objects/Case/fields/Fecha_de_despacho__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_despacho__c</fullName>
    <label>Fecha de despacho</label>
    <type>Date</type>
</CustomField>