force-app/main/default/objects/Case/fields/Fecha_de_elaboracion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_elaboracion__c</fullName>
    <label>Fecha de elaboracion</label>
    <type>Date</type>
</CustomField>