force-app/main/default/objects/Case/fields/Fecha_de_ingreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_ingreso__c</fullName>
    <label>Fecha de ingreso</label>
    <type>Date</type>
</CustomField>