force-app/main/default/objects/Case/fields/Fecha_de_inicio_de_tramite__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio_de_tramite__c</fullName>
    <label>Fecha de inicio de tramite</label>
    <type>Date</type>
</CustomField>