force-app/main/default/objects/Case/fields/Fecha_de_NC_ND__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_NC_ND__c</fullName>
    <label>Fecha de NC/ND</label>
    <type>Date</type>
</CustomField>