force-app/main/default/objects/Case/fields/Fecha_de_presentaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_presentaci_n__c</fullName>
    <label>Fecha de presentación</label>
    <type>Date</type>
</CustomField>