force-app/main/default/objects/Case/fields/Fecha_de_promesa_de_retiro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_promesa_de_retiro__c</fullName>
    <label>Fecha de promesa de retiro</label>
    <type>Date</type>
</CustomField>