force-app/main/default/objects/Case/fields/Fecha_de_recepci_n_de_muestra__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_recepci_n_de_muestra__c</fullName>
    <label>Fecha de recepción de muestra</label>
    <type>Date</type>
</CustomField>