force-app/main/default/objects/Case/fields/Fecha_de_retiro_efectivo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_retiro_efectivo__c</fullName>
    <label>Fecha de retiro efectivo</label>
    <type>Date</type>
</CustomField>