force-app/main/default/objects/Case/fields/Fecha_env_o_reposici_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_env_o_reposici_n__c</fullName>
    <label>Fecha envío reposición</label>
    <type>Date</type>
</CustomField>