force-app/main/default/objects/Case/fields/Fecha_envio_reposicion_2__c.field-meta.xml
<CustomField>
    <fullName>Fecha_envio_reposicion_2__c</fullName>
    <label>Fecha envio reposicion 2°</label>
    <type>Date</type>
</CustomField>