force-app/main/default/objects/Case/fields/Fecha_estimada_de_cambio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_estimada_de_cambio__c</fullName>
    <label>Fecha estimada de cambio</label>
    <type>Date</type>
</CustomField>