force-app/main/default/objects/Case/fields/Fecha_llamado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_llamado__c</fullName>
    <label>Fecha llamado</label>
    <type>Date</type>
</CustomField>