force-app/main/default/objects/Case/fields/Fecha_reposicion_2__c.field-meta.xml
<CustomField>
    <fullName>Fecha_reposicion_2__c</fullName>
    <inlineHelpText>Completar únicamente si la reposición fue realizada</inlineHelpText>
    <label>Fecha reposicion 2°</label>
    <type>Date</type>
</CustomField>