force-app/main/default/objects/Case/fields/Fecha_Reposicion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reposicion__c</fullName>
    <inlineHelpText>Completar únicamente si la reposición fue realizada</inlineHelpText>
    <label>Fecha Reposición</label>
    <type>Date</type>
</CustomField>