force-app/main/default/objects/Case/fields/Fecha_retiro_2__c.field-meta.xml
<CustomField>
    <fullName>Fecha_retiro_2__c</fullName>
    <inlineHelpText>Completar únicamente si la muestra fue retirada</inlineHelpText>
    <label>Fecha retiro 2°</label>
    <type>Date</type>
</CustomField>