force-app/main/default/objects/Case/fields/Fecha_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Retiro__c</fullName>
    <inlineHelpText>Completar únicamente si la muestra fue retirada</inlineHelpText>
    <label>Fecha Retiro</label>
    <type>Date</type>
</CustomField>