force-app/main/default/objects/Case/fields/Flow_tipo__c.field-meta.xml
<CustomField>
    <fullName>Flow_tipo__c</fullName>
    <label>Flow tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>