force-app/main/default/objects/Case/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <description>Para el formulario de la comunidad de pacientes</description>
    <label>Fórmula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neocate Gold</fullName>
            </value>
            <value>
                <fullName>Neocate Junior Vainilla</fullName>
            </value>
            <value>
                <fullName>Neocate Junior sin sabor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>