force-app/main/default/objects/Case/fields/Fotos_de_reclamos__c.field-meta.xml
<CustomField>
    <fullName>Fotos_de_reclamos__c</fullName>
    <label>Fotos de reclamos</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>