force-app/main/default/objects/Case/fields/Franja_horaria_2__c.field-meta.xml
<CustomField>
    <fullName>Franja_horaria_2__c</fullName>
    <label>Franja horaria 2°</label>
    <length>225</length>
    <type>Text</type>
</CustomField>