force-app/main/default/objects/Case/fields/Franja_horaria__c.field-meta.xml
<CustomField>
    <fullName>Franja_horaria__c</fullName>
    <label>Franja horaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>