force-app/main/default/objects/Case/fields/FromEnvio__c.field-meta.xml
<CustomField>
    <fullName>FromEnvio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FromEnvio</label>
    <type>Checkbox</type>
</CustomField>