force-app/main/default/objects/Case/fields/Historia_Cl_nica__c.field-meta.xml
<CustomField>
    <fullName>Historia_Cl_nica__c</fullName>
    <inlineHelpText>Presentó historia clínica?</inlineHelpText>
    <label>Historia Clínica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>