force-app/main/default/objects/Case/fields/Hora_de_check_in__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_check_in__c</fullName>
    <label>Hora de check in</label>
    <type>DateTime</type>
</CustomField>