force-app/main/default/objects/Case/fields/Hora_de_check_out__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_check_out__c</fullName>
    <label>Hora de check out</label>
    <type>DateTime</type>
</CustomField>