force-app/main/default/objects/Case/fields/Horario_de_envasado__c.field-meta.xml
<CustomField>
    <fullName>Horario_de_envasado__c</fullName>
    <label>Horario de envasado</label>
    <type>Time</type>
</CustomField>