force-app/main/default/objects/Case/fields/Horario_hasta__c.field-meta.xml
<CustomField>
    <fullName>Horario_hasta__c</fullName>
    <description>Para el formulario de solicitud de kits de inicio desde el portal de pacientes</description>
    <label>Horario hasta</label>
    <type>Time</type>
</CustomField>