force-app/main/default/objects/Case/fields/ID_de_Paciente__c.field-meta.xml
<CustomField>
    <fullName>ID_de_Paciente__c</fullName>
    <formula>Account.ID_de_paciente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID de Paciente</label>
    <type>Text</type>
</CustomField>