force-app/main/default/objects/Case/fields/ID_reclamo__c.field-meta.xml
<CustomField>
    <fullName>ID_reclamo__c</fullName>
    <inlineHelpText>Ingresar todos los reclamos asociados separados por &quot;-&quot;</inlineHelpText>
    <label>ID reclamo</label>
    <type>TextArea</type>
</CustomField>