force-app/main/default/objects/Case/fields/Imagen_remito_2__c.field-meta.xml
<CustomField>
    <fullName>Imagen_remito_2__c</fullName>
    <label>Imagen Remito 2°</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>