force-app/main/default/objects/Case/fields/Imagen_Remito__c.field-meta.xml
<CustomField>
    <fullName>Imagen_Remito__c</fullName>
    <label>Imagen Remito</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>