force-app/main/default/objects/Case/fields/Importe_a_Refacturar__c.field-meta.xml
<CustomField>
    <fullName>Importe_a_Refacturar__c</fullName>
    <label>Importe a Refacturar</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>