force-app/main/default/objects/Case/fields/Importe_de_la_NC_ND__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_la_NC_ND__c</fullName>
    <label>Importe de la NC/ND</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>