force-app/main/default/objects/Case/fields/Importe_IVA_Total_inscrito__c.field-meta.xml
<CustomField>
    <fullName>Importe_IVA_Total_inscrito__c</fullName>
    <description>Campo que trae el Importe Documento de la factura relacionada al caso.</description>
    <formula>Dan360_Factura__r.Dan360_ImporteIVATotalInscripto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe IVA Total inscrito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>