force-app/main/default/objects/Case/fields/Inkjet__c.field-meta.xml
<CustomField>
    <fullName>Inkjet__c</fullName>
    <label>Inkjet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>