force-app/main/default/objects/Case/fields/Institucion__c.field-meta.xml
<CustomField>
    <fullName>Institucion__c</fullName>
    <inlineHelpText>En caso de que el motivo sea &apos;Donaciones&apos;</inlineHelpText>
    <label>Institución</label>
    <length>100</length>
    <type>Text</type>
</CustomField>