force-app/main/default/objects/Case/fields/iSLA__c.field-meta.xml
<CustomField>
    <fullName>iSLA__c</fullName>
    <formula>CASE( SLA_numero__c, 
1,IMAGE(&quot;/resource/1560263727000/SLAverde&quot;,&quot;1&quot;) , 
2, (IMAGE(&quot;/resource/1560263781000/SLAamarillo&quot;,&quot;2&quot;)), 
3, (IMAGE(&quot;/resource/1560263560000/SLArojo&quot;,&quot;3&quot;)), 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA</label>
    <type>Text</type>
</CustomField>