force-app/main/default/objects/Case/fields/Justificativo_m_dico__c.field-meta.xml
<CustomField>
    <fullName>Justificativo_m_dico__c</fullName>
    <inlineHelpText>Presentó Justificativo médico?</inlineHelpText>
    <label>Justificativo médico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>