force-app/main/default/objects/Case/fields/Llamado_sensible__c.field-meta.xml
<CustomField>
    <fullName>Llamado_sensible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si el llamado es sensible, marque la casilla.</inlineHelpText>
    <label>Llamado sensible</label>
    <type>Checkbox</type>
</CustomField>