force-app/main/default/objects/Case/fields/Lote_de_retiro_2__c.field-meta.xml
<CustomField>
    <fullName>Lote_de_retiro_2__c</fullName>
    <inlineHelpText>Completar únicamente si la muestra fue retirada</inlineHelpText>
    <label>Lote de retiro 2°</label>
    <length>25</length>
    <type>Text</type>
</CustomField>