force-app/main/default/objects/Case/fields/Lote_reposici_n_2__c.field-meta.xml
<CustomField>
    <fullName>Lote_reposici_n_2__c</fullName>
    <inlineHelpText>Completar únicamente si la reposición fue realizada</inlineHelpText>
    <label>Lote reposición 2°</label>
    <length>260</length>
    <type>LongTextArea</type>
</CustomField>