force-app/main/default/objects/Case/fields/Lote_resposicion__c.field-meta.xml
<CustomField>
    <fullName>Lote_resposicion__c</fullName>
    <inlineHelpText>Completar únicamente si la reposición fue realizada</inlineHelpText>
    <label>Lote reposición</label>
    <length>260</length>
    <type>LongTextArea</type>
</CustomField>