force-app/main/default/objects/Case/fields/Mapa__c.field-meta.xml
<CustomField>
    <fullName>Mapa__c</fullName>
    <formula>IF( AND( NOT(ISBLANK( Account.Calle__c )), NOT(ISBLANK( Account.Localidad__c )), NOT(ISBLANK( Account.Provincia__c ))),
 HYPERLINK(&apos;https://maps.google.com/maps/place/&apos; + Account.Calle__c + &apos;+&apos; + Account.Provincia__c, IMAGE(&apos;http://maps.google.com/maps/api/staticmap?center=&apos; + Account.Calle__c + &apos;, &apos; + Account.Provincia__c +&apos;&amp;zoom=13&amp;size=2000x200&amp;markers=color:red|&apos; + Account.Calle__c + &apos;, &apos; + Account.Provincia__c + &apos;&amp;key=AIzaSyDME8WnL7m3m5XdszA2ECzcxZcElktL7yM&apos;,&apos;Mapa no disponible&apos;)), &quot;Mapa no disponible&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapa</label>
    <type>Text</type>
</CustomField>