force-app/main/default/objects/Case/fields/Medico_tratante__c.field-meta.xml
<CustomField>
    <fullName>Medico_tratante__c</fullName>
    <label>Médico tratante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>