force-app/main/default/objects/Case/fields/Modulo_de_paciente__c.field-meta.xml
<CustomField>
    <fullName>Modulo_de_paciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modulo de paciente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Modulo_de_paciente__c.Estado__c</field>
            <operation>equals</operation>
            <value>Activo</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Modulo_de_paciente__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>