force-app/main/default/objects/Case/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <description>Se crea un campo Motivo personalizado porque el estándar no puede ser dependiente de otro campo.</description>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subtipo__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Abandono de persona</fullName>
            </value>
            <value>
                <fullName>Abuso/ acoso/ violencia</fullName>
            </value>
            <value>
                <fullName>Acceso a recursos varios</fullName>
            </value>
            <value>
                <fullName>Actualización estado del pedido</fullName>
            </value>
            <value>
                <fullName>Adicionales a autorizado por OOSS</fullName>
            </value>
            <value>
                <fullName>Administración y preparación de fórmula</fullName>
            </value>
            <value>
                <fullName>Almacenamiento de productos</fullName>
            </value>
            <value>
                <fullName>ALTA</fullName>
            </value>
            <value>
                <fullName>Alta/Fin de tratamiento</fullName>
            </value>
            <value>
                <fullName>Alta Paciente BC</fullName>
            </value>
            <value>
                <fullName>Amenaza de denuncia/ publicacion en redes</fullName>
            </value>
            <value>
                <fullName>Asegurar entrega</fullName>
            </value>
            <value>
                <fullName>Asesoramiento sobre Organismos</fullName>
            </value>
            <value>
                <fullName>Autoridades/ Personas publicas/ Bromatologia/ ONG</fullName>
            </value>
            <value>
                <fullName>Baja del servicio sin módulo</fullName>
            </value>
            <value>
                <fullName>Baja de Paciente</fullName>
            </value>
            <value>
                <fullName>Becas</fullName>
            </value>
            <value>
                <fullName>Cambio de dirección</fullName>
            </value>
            <value>
                <fullName>Cambio de indicación</fullName>
            </value>
            <value>
                <fullName>Cambio de OOSS</fullName>
            </value>
            <value>
                <fullName>Cantidad</fullName>
            </value>
            <value>
                <fullName>Capacitaciones</fullName>
            </value>
            <value>
                <fullName>Capacitación Presencial</fullName>
            </value>
            <value>
                <fullName>Capacitación Telefónica</fullName>
            </value>
            <value>
                <fullName>Cobranza</fullName>
            </value>
            <value>
                <fullName>Cobranzas</fullName>
            </value>
            <value>
                <fullName>Comodato</fullName>
            </value>
            <value>
                <fullName>Comodatos, encuestas, varios</fullName>
            </value>
            <value>
                <fullName>Complicaciones enterales</fullName>
            </value>
            <value>
                <fullName>Condición de salud del pcte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>