force-app/main/default/objects/Case/fields/Motivo_de_no_entrega__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_no_entrega__c</fullName>
    <label>Motivo de no entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corto Vencimiento</fullName>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
            <value>
                <fullName>Rotura</fullName>
            </value>
            <value>
                <fullName>No Pedido</fullName>
            </value>
            <value>
                <fullName>Error Administrativo</fullName>
            </value>
            <value>
                <fullName>Producto Faltante</fullName>
            </value>
            <value>
                <fullName>Error pedido de cliente</fullName>
            </value>
            <value>
                <fullName>Mal Preparado</fullName>
            </value>
            <value>
                <fullName>CAI Vencido</fullName>
            </value>
            <value>
                <fullName>Fuera de termino</fullName>
            </value>
            <value>
                <fullName>Mal estado</fullName>
            </value>
            <value>
                <fullName>Muestra</fullName>
            </value>
            <value>
                <fullName>Devolución</fullName>
            </value>
            <value>
                <fullName>Producto incorrecto</fullName>
            </value>
            <value>
                <fullName>Devolución Dispro</fullName>
            </value>
            <value>
                <fullName>Baja rotación</fullName>
            </value>
            <value>
                <fullName>Devolución Cia Farmaceutica</fullName>
            </value>
            <value>
                <fullName>Falleció</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Destinatario ausente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>