force-app/main/default/objects/Case/fields/Motivo_de_rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_rechazo__c</fullName>
    <label>Motivo de rechazo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>