force-app/main/default/objects/Case/fields/Muestra_fue_retirada__c.field-meta.xml
<CustomField>
    <fullName>Muestra_fue_retirada__c</fullName>
    <label>Muestra Retirada?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>