force-app/main/default/objects/Case/fields/Muestra_retirada_2__c.field-meta.xml
<CustomField>
    <fullName>Muestra_retirada_2__c</fullName>
    <label>Muestra retirada 2°?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>