force-app/main/default/objects/Case/fields/Muestra_retirada__c.field-meta.xml
<CustomField>
    <fullName>Muestra_retirada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muestra retirada?</label>
    <type>Checkbox</type>
</CustomField>