force-app/main/default/objects/Case/fields/N_de_Billing_asociado_factura__c.field-meta.xml
<CustomField>
    <fullName>N_de_Billing_asociado_factura__c</fullName>
    <label>N° de Billing asociado (factura)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>