force-app/main/default/objects/Case/fields/N_de_Reposici_n__c.field-meta.xml
<CustomField>
    <fullName>N_de_Reposici_n__c</fullName>
    <label>N° de Reposición</label>
    <length>40</length>
    <type>Text</type>
</CustomField>