force-app/main/default/objects/Case/fields/N_de_Retiro__c.field-meta.xml
<CustomField>
    <fullName>N_de_Retiro__c</fullName>
    <label>N° de Retiro</label>
    <length>40</length>
    <type>Text</type>
</CustomField>