force-app/main/default/objects/Case/fields/N_de_tramite__c.field-meta.xml
<CustomField>
    <fullName>N_de_tramite__c</fullName>
    <label>Nº de tramite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>