force-app/main/default/objects/Case/fields/N_Legal_NC_ND__c.field-meta.xml
<CustomField>
    <fullName>N_Legal_NC_ND__c</fullName>
    <label>N° Legal (NC/ND)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>