force-app/main/default/objects/Case/fields/N_mero_de_remito__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_remito__c</fullName>
    <label>Número de remito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>