force-app/main/default/objects/Case/fields/N_mero_de_tr_mite__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_tr_mite__c</fullName>
    <label>Número de trámite</label>
    <length>30</length>
    <type>Text</type>
</CustomField>